# arc-stack

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  cliff.toml  docusaurus.config.js  mkdocs.yml  netlify.toml  package-lock.json  package.json  pyproject.toml  sidebars.js
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-title.yml  release.yml
arc/: __init__.py  cascade.py  cli.py  conflicts.py  const.py  dashboard.py  exceptions.py  git.py  github.py  graph.py  hooks.py  ops.py  report.py  state.py  tip.py  update.py
arc/commands/: __init__.py  _edit_ops.py  _shared.py  config.py  diagnostics.py  edit.py  nav.py  stack.py  submit.py  sync.py
docs/: index.md
docs/developer/: RELEASE.md
docs/features/: ROADMAP.md
docs/guide/: architecture.md  concepts.md  editing.md  hooks.md  landing.md  scripting.md  stacking.md  submitting.md  syncing.md
docs/reference/: commands.md  config.md  exit-codes.md  hooks.md  json-output.md
docs/start/: install.md  quickstart.md
docs/superpowers/specs/: 2026-05-31-arc-design.md
skills/: arc.md
src/css/: custom.css
tests/: conftest.py  test_cascade.py  test_cassette_masking_e2e.py  test_cli.py  test_conflicts.py  test_dashboard.py  test_edit.py  test_edit_ops.py  test_exceptions.py  test_git.py  test_github.py  test_graph.py  test_hooks.py  test_hooks_wiring.py  test_ops.py  test_report.py  test_report_e2e.py  test_state.py  test_sync_retarget.py  test_tip.py  test_update.py
