[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc-prs"
version = "0.2.1"
description = "Local CLI for managing stacked pull requests"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
arc = "arc.cli:cli"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "vcrpy>=8.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["arc"]
